# Black-2018

./: README.md  decay_model.m
SEEIIRp/: SEEIIRp_gillespie_sim.m  SEEIIRp_is.m  test_is.m
SEIAR/: SEIAR_alive.m  SEIAR_gillespie_sim.m  SEIAR_is.m  test_is.m  test_is.m~
SEIAR_pmMH/: CMakeLists.txt  Makefile  README.md  SEIAR_cov_mat.txt  SEIAR_model.c  SEIAR_model.h  mcmc_SEIAR.c  particle_mcmc.c  particle_mcmc.h
SEIAR_pmMH/cov_mat/: cov_p.txt
SEIR/: SEIR_gillespie_sim.m  SEIR_is.m  test_is.m
SIR/: SIR_forward_day_gillespie.m  SIR_forward_day_is.m  test_is.m
